// DO NOT EDIT: generated by Dremio openapi-generator.
syntax = "proto3";

package com.dremio.test.api2;

import "spec1.proto";

option java_package = "com.dremio.test.api2";
option java_outer_classname = "TestApiProto2";

// Includes a message from the other file.
message Body2 {
  optional com.dremio.test.api.GetBody value = 1;

  com.dremio.test.api.GetBody required_value = 2;

  // Referenced enum.
  repeated com.dremio.test.api.Enum enum_list = 3;

  repeated com.dremio.test.api.Enum enum_array = 4;
}
